--- a/provisioning/main.yml
+++ b/provisioning/main.yml
@@ -226,6 +226,15 @@
         virtualenv: /usr/lib/ckan/default
         editable: yes
 
+    - name: Initialize CKAN pages database
+      become: yes
+      ansible.builtin.command:
+        cmd: ckan --config=/etc/ckan/default/ckan.ini pages initdb
+        # Use the virtualenv's python to run the CKAN command
+        executable: /usr/lib/ckan/default/bin/python
+      environment:
+        PATH: "/usr/lib/ckan/default/bin:{{ ansible_env.PATH }}"
+        
     # An SSH keypair with access to the cd2 repository should be placed in the provisioning/files/
     # directory. The filenames of the keypair files must begin with id_ (e.g. id_rsa + id_rsa.pub).
     # It is recommended, as a security precaution, to generate a dedicated CD² keypair (e.g. using
