--- a/provisioning/main.yml
+++ b/provisioning/main.yml
@@ -228,13 +228,13 @@
 
     - name: Initialize CKAN pages database
       become: yes
-      ansible.builtin.command:
-        cmd: ckan --config=/etc/ckan/default/ckan.ini pages initdb
-        # Use the virtualenv's python to run the CKAN command
-        executable: /usr/lib/ckan/default/bin/python
+      ansible.builtin.shell:
+        cmd: . /usr/lib/ckan/default/bin/activate && ckan --config=/etc/ckan/default/ckan.ini pages initdb
+      args:
+        executable: /bin/bash
       environment:
         PATH: "/usr/lib/ckan/default/bin:{{ ansible_env.PATH }}"
-        
+
     # An SSH keypair with access to the cd2 repository should be placed in the provisioning/files/
     # directory. The filenames of the keypair files must begin with id_ (e.g. id_rsa + id_rsa.pub).
     # It is recommended, as a security precaution, to generate a dedicated CD² keypair (e.g. using
