CKAN role: initialize pages plugin

--- a/roles/ckan/tasks/main.yml
+++ b/roles/ckan/tasks/main.yml
@@ -311,6 +311,18 @@
     ansible_ssh_pipelining: true
   when: 'userlist.rc !=0 or "default" not in userlist.stdout'
 
+
+- name: Initialize CKAN pages plugin
+  become_user: root
+  become: true
+  ansible.builtin.command: # noqa no-changed-when
+    cmd: "{{ ckan_cli_executable }} --config {{ ckan_ini_file }} pages initdb"
+  vars:
+    # Pipelininig is needed for internal temporary files
+    ansible_ssh_pipelining: true
+  when: 'userlist.rc !=0 or "default" not in userlist.stdout'
+
+
 # Reload supervisorctl as task, because there is no way to enforce ordering in
 # Ansible handlers, and we need to reload before we can start tasks.
 - name: Reload supervisorctl  # noqa command-instead-of-module no-changed-when
