--- a/roles/ckan/tasks/main.yml
+++ b/roles/ckan/tasks/main.yml
@@ -45,11 +45,15 @@
 
 - name: Ensure CKAN storage path is present
   ansible.builtin.file:
-    path: "{{ ckan_storage_path }}"
+    path: "{{ item }}"
     state: directory
     owner: www-data
     group: www-data
     mode: "0775"
+  with_items:
+    - "{{ ckan_storage_path }}"
+    - "{{ ckan_storage_path }}/storage"
+    - "{{ ckan_storage_path }}/webassets"
 
 
 - name: Install CKAN package
@@ -436,3 +440,12 @@
     src: /usr/lib/ckan/cd2-config/ckanext/msl_ckan/public/img/
     dest: "/var/www/ckan-images"
   delegate_to: "{{ inventory_hostname }}"
+
+
+- name: Fix up permissions CKAN storage directory
+  ansible.builtin.file:
+    dest: "{{ ckan_storage_path }}"
+    owner: www-data
+    group: www-data
+    mode: "u=rwX,g=rX,o=rX"
+    recurse: true
