--- a/roles/ckan/defaults/main.yml
+++ b/roles/ckan/defaults/main.yml
@@ -52,15 +52,14 @@ ckan_db_lc_ctype: en_US.utf8
 # CKAN extension versions
 ckanext_scheming_version: release-2.1.0
 ckan_pages_plugin_version: v0.5.2
-ckan_cd2_theme_version: 2873b614385444d1cb6b39425c201493049596ca  # Version of 6 February 2024
+ckan_cd2_theme_version: a80f1a160b8a12a9b8bff32da8941cdd843ea208  # Version of 18 Juni 2024
 ckan_cd2_theme_css_less: /usr/lib/ckan/default/src/ckanext-cd2-theme/ckanext/cd2_theme/less/main.less
 ckan_cd2_theme_css_custom: /usr/lib/ckan/default/src/ckanext-cd2-theme/ckanext/cd2_theme/fanstatic/cd2_custom.css
-
-ckan_cd2_config_version: aab2057e56705c0e57639f1aac6d3af36e71011a # Version of 6 February 2024
+ckan_cd2_config_version: development-its
 ckan_msl_util_plugin_branch: 1.0.0
 
-ckan_install_oaipmh_server_plugin: false
+ckan_install_oaipmh_server_plugin: true
 ckan_pyoai_repo: EUDAT-B2FIND/pyoai
 ckan_pyoai_version: c820990bad0eb1f1267532041f458bc716461ec8 # Version of 23 Jan 2023; prov_py3 branch
 ckan_oaipmh_server_plugin_repo: UtrechtUniversity/ckanext-oaipmh-server
-ckan_oaipmh_server_plugin_version: ab5144024cac361bfaa1d355a34920d26296f7bd # Version of 7 March 2024
+ckan_oaipmh_server_plugin_version: 148dcc2cfc6d75d0e6258458efee35752b204840 # Version of 24 June 2024
