--- a/roles/ckan/defaults/main.yml
+++ b/roles/ckan/defaults/main.yml
@@ -54,6 +54,7 @@ ckanext_scheming_version: release-2.1.0
 ckan_pages_plugin_version: v0.5.2
 ckan_cd2_theme_version: v1.0.0
 ckan_cd2_theme_css_less: /usr/lib/ckan/default/src/ckanext-cd2-theme/ckanext/cd2_theme/less/main.less
+ckan_cd2_theme_css_less_dir: /usr/lib/ckan/default/src/ckanext-cd2-theme/ckanext/cd2_theme/less
 ckan_cd2_theme_css_custom: /usr/lib/ckan/default/src/ckanext-cd2-theme/ckanext/cd2_theme/fanstatic/cd2_custom.css
 ckan_cd2_config_version: v1.0.0
 ckan_msl_util_plugin_branch: 1.0.0
