--- a/docker/images/ckan/ckan.ini
+++ b/docker/images/ckan/ckan.ini
@@ -1,4 +1,3 @@
-# {{ ansible_managed }}
 #
 # CKAN - Pylons configuration
 #
@@ -33,14 +32,16 @@ beaker.session.key = ckan
 # This is the secret token that the beaker library uses to hash the cookie sent
 # to the client. `ckan generate config` generates a unique value for this each
 # time it generates a config file.
-beaker.session.secret = {{ session_secret.stdout }}
+beaker.session.secret = BEAKER_SESSION_SECRET
+
+SECRET_KEY = SECRET_TOKEN_VALUE
 
 # `ckan generate config` generates a unique value for this each time it generates
 # a config file.
-app_instance_uuid = {{ app_instance_uuid.stdout }}
+app_instance_uuid = APP_INSTANCE_UUID
 
 # Default number of search facets returned in a query
-search.facets.limit = {{ ckan_search_facets_limit }}
+search.facets.limit = 10000
 
 # repoze.who config
 who.config_file = %(here)s/who.ini
@@ -48,10 +49,10 @@ who.log_level = warning
 who.log_file = %(cache_dir)s/who_log.ini
 # Session timeout (user logged out after period of inactivity, in seconds).
 # Inactive by default, so the session doesn't expire.
-who.timeout = {{ ckan_session_timeout | string }}
+who.timeout = 3600
 
 ## Database Settings
-sqlalchemy.url = postgresql://ckan_default:{{ ckan_database_password }}@localhost/ckan_default
+sqlalchemy.url = postgresql://ckan:CKAN_DATABASE_PASSWORD@db/ckan_default
 
 #ckan.datastore.write_url = postgresql://ckan_default:pass@localhost/datastore_default
 #ckan.datastore.read_url = postgresql://datastore_default:pass@localhost/datastore_default
@@ -60,11 +61,11 @@ sqlalchemy.url = postgresql://ckan_default:{{ ckan_database_password }}@localhos
 ckan.datastore.default_fts_lang = english
 ckan.datastore.default_fts_index_method = gist
 
-ckan.tracking_enabled = {{ ckan_tracking_enabled }}
+ckan.tracking_enabled = true
 
 ## Site Settings
 
-ckan.site_url = https://{{ ckan_fqdn }}
+ckan.site_url = CKAN_SITE_URL
 #ckan.use_pylons_response_cleanup_middleware = true
 
 # Default timeout for Requests
@@ -100,13 +101,14 @@ expire_api_token.default_lifetime = 3600
 ## Search Settings
 
 ckan.site_id = default
-solr_url = http://127.0.0.1:{{ solr_port }}/solr/ckan
+
+solr_url = http://solr:8983/solr/ckan
 
 
 ## Redis Settings
 
 # URL to your Redis instance, including the database to be used.
-#ckan.redis.url = redis://localhost:6379/0
+ckan.redis.url = redis://redis:6379/1
 
 
 ## CORS Settings
@@ -125,11 +127,7 @@ solr_url = http://127.0.0.1:{{ solr_port }}/solr/ckan
 #		Add ``resource_proxy`` to enable resource proxying and get around the
 #		same origin policy
 #ckan.plugins = stats text_view image_view recline_view
-{% if ckan_install_oaipmh_server_plugin %}
 ckan.plugins = stats text_view image_view recline_view cd2_theme cd2_config scheming_datasets scheming_groups scheming_organizations msl_custom_facets msl_repeating_fields pages oaipmh
-{% else %}
-ckan.plugins = stats text_view image_view recline_view cd2_theme cd2_config scheming_datasets scheming_groups scheming_organizations msl_custom_facets msl_repeating_fields pages
-{% endif %}
 
 # Define which views should be created by default
 # (plugins must be loaded in ckan.plugins)
@@ -151,10 +149,10 @@ mslindexfields.field_config   = ckanext.cd2_config:config/msl_index_fields.json
 
 ## Front-End Settings
 
-ckan.site_title = {{ ckan_site_title }}
-ckan.site_logo = {{ ckan_cd2_logo_relpath }}
-ckan.site_description = {{ ckan_site_description }}
-ckan.site_intro_text = {{ ckan_site_intro_text }}
+ckan.site_title = CKAN
+ckan.site_logo = /base/images/cd2-logo.png
+ckan.site_description = The CD² metadata catalogue aggregates the metadata of the Dutch youth development cohort studies collaborating under the Consortium on Individual Development (CID) umbrella.
+ckan.site_intro_text = The CD² metadata catalogue aggregates the metadata of the Dutch youth development cohort studies collaborating under the Consortium on Individual Development (CID) umbrella.
 
 # The favicon is provided by the CD2 theme
 # original value:
@@ -192,7 +190,7 @@ ckan.feeds.author_link =
 
 ## Storage Settings
 
-ckan.storage_path = {{ ckan_storage_path }}
+ckan.storage_path = /ckanstorage
 #ckan.max_resource_size = 10
 #ckan.max_image_size = 2
 
@@ -230,8 +228,8 @@ ckan.hide_activity_from_users = %(ckan.site_id)s
 
 #email_to = errors@example.com
 #error_email_from = ckan-errors@example.com
-#smtp.server = localhost
-#smtp.starttls = False
+smtp.server = mta 
+smtp.starttls = False
 #smtp.user = username@example.com
 #smtp.password = your_password
 #smtp.mail_from =
