Re-enable pages ext with 2.11 ckan support commit

--- a/docker/images/ckan/Dockerfile
+++ b/docker/images/ckan/Dockerfile
@@ -64,7 +64,7 @@ ENV CKAN_VERSION=2.11.0
 ENV CKAN_CD2_LOGO_PATH_PREFIX=/usr/lib/ckan/default/src/ckan/ckan/public
 ENV CKAN_CD2_LOGO_RELPATH=base/images/cd2-logo.png
 # Extensions, plugins
-ENV CKAN_PAGES_PLUGIN_VERSION=v0.5.2
+ENV CKAN_PAGES_PLUGIN_VERSION=master
 ENV CKAN_SCHEMING_VERSION=release-3.0.0
 ENV CKAN_PYOAI_REPO=EUDAT-B2FIND/pyoai
 ENV CKAN_PYOAI_VERSION=c820990bad0eb1f1267532041f458bc716461ec8
