Replace tracking with tracking plugin

--- a/docker/images/ckan/ckan.ini
+++ b/docker/images/ckan/ckan.ini
@@ -61,7 +61,6 @@ sqlalchemy.url = postgresql://ckan:CKAN_DATABASE_PASSWORD@db/ckan_default
 ckan.datastore.default_fts_lang = english
 ckan.datastore.default_fts_index_method = gist
 
-ckan.tracking_enabled = true
 
 ## Site Settings
 
@@ -127,7 +126,7 @@ ckan.redis.url = redis://redis:6379/1
 #		Add ``resource_proxy`` to enable resource proxying and get around the
 #		same origin policy
 #ckan.plugins = stats text_view image_view recline_view
-ckan.plugins = stats text_view image_view cd2_theme cd2_config scheming_datasets scheming_groups scheming_organizations msl_custom_facets msl_repeating_fields pages oaipmh
+ckan.plugins = stats text_view image_view cd2_theme cd2_config scheming_datasets scheming_groups scheming_organizations tracking msl_custom_facets msl_repeating_fields pages oaipmh
 
 # Define which views should be created by default
 # (plugins must be loaded in ckan.plugins)
