Re-enable cd2_theme

--- a/docker/images/ckan/ckan.ini
+++ b/docker/images/ckan/ckan.ini
@@ -127,7 +127,7 @@ ckan.redis.url = redis://redis:6379/1
 #		same origin policy
 #ckan.plugins = stats text_view image_view recline_view
 # TODO disable tracking temporarily
-ckan.plugins = stats text_view image_view cd2_config scheming_datasets scheming_groups scheming_organizations msl_custom_facets msl_repeating_fields pages oaipmh
+ckan.plugins = stats text_view image_view cd2_config cd2_theme scheming_datasets scheming_groups scheming_organizations msl_custom_facets msl_repeating_fields pages oaipmh
 
 # Define which views should be created by default
 # (plugins must be loaded in ckan.plugins)
