--- a/docker/images/ckan/ckan.ini
+++ b/docker/images/ckan/ckan.ini
@@ -119,13 +119,13 @@ ckan.redis.url = redis://redis:6379/1
 #       Add ``datapusher`` to enable DataPusher
 #		Add ``resource_proxy`` to enable resource proxying and get around the
 #		same origin policy
-#ckan.plugins = stats text_view image_view recline_view
+#ckan.plugins = stats text_view image_view
 # TODO disable tracking temporarily
 ckan.plugins = stats text_view image_view cd2_config cd2_theme scheming_datasets scheming_groups scheming_organizations tracking msl_custom_facets msl_repeating_fields pages oaipmh
 
 # Define which views should be created by default
 # (plugins must be loaded in ckan.plugins)
-ckan.views.default_views = image_view text_view recline_view
+ckan.views.default_views = image_view text_view
 
 # cd2_config settings
 scheming.dataset_schemas      = ckanext.cd2_config:schemas/datasets/cd2_measure.yml ckanext.cd2_config:schemas/datasets/cd2_study.yml
