--- a/docker/images/ckan/ckan.ini
+++ b/docker/images/ckan/ckan.ini
@@ -120,8 +120,7 @@ ckan.redis.url = redis://redis:6379/1
 #		Add ``resource_proxy`` to enable resource proxying and get around the
 #		same origin policy
 #ckan.plugins = stats text_view image_view
-# TODO disable tracking temporarily
-ckan.plugins = stats text_view image_view cd2_config cd2_theme scheming_datasets scheming_groups scheming_organizations tracking msl_custom_facets msl_repeating_fields pages oaipmh
+ckan.plugins = activity stats text_view image_view cd2_config cd2_theme scheming_datasets scheming_groups scheming_organizations tracking msl_custom_facets msl_repeating_fields pages oaipmh
 
 # Define which views should be created by default
 # (plugins must be loaded in ckan.plugins)
