--- a/docker/images/ckan/Dockerfile
+++ b/docker/images/ckan/Dockerfile
@@ -70,7 +70,9 @@ ENV CKAN_PYOAI_VERSION=c820990bad0eb1f1267532041f458bc716461ec8
 # Our plugins
 #ENV CKAN_CD2_CONFIG_VERSION=v1.0.1
 ENV CKAN_CD2_CONFIG_VERSION=YDA-6221-docker-setup-upgrade
-ENV CKAN_MSL_UTIL_VERSION=1.1.0
+# MSL_UTIL v1.1.0 is not backwards compatible with existing data, because
+# it does not have 'remove_index_fields' fields
+ENV CKAN_MSL_UTIL_VERSION=1.0.0
 # ENV CKAN_CD2_THEME_VERSION=v1.0.2
 ENV CKAN_CD2_THEME_VERSION=YDA-6221-docker-setup-upgrade 
 ENV CKAN_OAIPMH_SERVER_PLUGIN_REPO=UtrechtUniversity/ckanext-oaipmh-server
