--- a/docker/images/ckan/Dockerfile
+++ b/docker/images/ckan/Dockerfile
@@ -70,13 +70,11 @@ ENV CKAN_SCHEMING_VERSION=release-3.0.0
 ENV CKAN_PYOAI_REPO=EUDAT-B2FIND/pyoai
 ENV CKAN_PYOAI_VERSION=c820990bad0eb1f1267532041f458bc716461ec8
 # Our plugins
-#ENV CKAN_CD2_CONFIG_VERSION=v1.0.1
 # Please ensure that CD2 config version for Solr and CKAN containers
 # are the same.
-ENV CKAN_CD2_CONFIG_VERSION=YDA-6221-docker-setup-upgrade
+ENV CKAN_CD2_CONFIG_VERSION=v1.0.2
 ENV CKAN_MSL_UTIL_VERSION=1.1.0
-# ENV CKAN_CD2_THEME_VERSION=v1.0.2
-ENV CKAN_CD2_THEME_VERSION=YDA-6221-docker-setup-upgrade 
+ENV CKAN_CD2_THEME_VERSION=v1.1.0
 ENV CKAN_OAIPMH_SERVER_PLUGIN_REPO=UtrechtUniversity/ckanext-oaipmh-server
 ENV CKAN_OAIPMH_SERVER_PLUGIN_VERSION=YDA-6221-docker-setup-upgrade
 #ENV CKAN_OAIPMH_SERVER_PLUGIN_VERSION=3fc2b5cd7443f71a631a71c16cb3228a17adfe8d
