--- a/docker/images/solr/Dockerfile
+++ b/docker/images/solr/Dockerfile
@@ -9,7 +9,7 @@ ENV SOLR_CONFIG_DIR="/opt/solr/server/solr/configsets"
 ENV SOLR_VERSION="8.11.3"
 # Please ensure that CD2 config version for Solr and CKAN containers
 # are the same.
-ENV CKAN_CD2_CONFIG_VERSION=YDA-6221-docker-setup-upgrade
+ENV CKAN_CD2_CONFIG_VERSION=v1.0.2
 ENV SOLR_ELEVATE_EXAMPLE_DIR="${SOLR_CONFIG_DIR}/sample_techproducts_configs/conf"
 
 # Create a CKAN configset based on the default one
