--- a/docker/images/ckan/ckan.ini
+++ b/docker/images/ckan/ckan.ini
@@ -27,12 +27,6 @@ ckan.devserver.port = 5000
 
 ## Session settings
 cache_dir = /tmp/%(ckan.site_id)s/
-beaker.session.key = ckan
-
-# This is the secret token that the beaker library uses to hash the cookie sent
-# to the client. `ckan generate config` generates a unique value for this each
-# time it generates a config file.
-beaker.session.secret = BEAKER_SESSION_SECRET
 
 SECRET_KEY = SECRET_TOKEN_VALUE
 
@@ -61,7 +55,6 @@ sqlalchemy.url = postgresql://ckan:CKAN_DATABASE_PASSWORD@db/ckan_default
 ckan.datastore.default_fts_lang = english
 ckan.datastore.default_fts_index_method = gist
 
-ckan.tracking_enabled = true
 
 ## Site Settings
 
@@ -126,12 +119,12 @@ ckan.redis.url = redis://redis:6379/1
 #       Add ``datapusher`` to enable DataPusher
 #		Add ``resource_proxy`` to enable resource proxying and get around the
 #		same origin policy
-#ckan.plugins = stats text_view image_view recline_view
-ckan.plugins = stats text_view image_view recline_view cd2_theme cd2_config scheming_datasets scheming_groups scheming_organizations msl_custom_facets msl_repeating_fields pages oaipmh
+#ckan.plugins = stats text_view image_view
+ckan.plugins = activity stats text_view image_view cd2_config cd2_theme scheming_datasets scheming_groups scheming_organizations tracking msl_custom_facets msl_repeating_fields pages oaipmh
 
 # Define which views should be created by default
 # (plugins must be loaded in ckan.plugins)
-ckan.views.default_views = image_view text_view recline_view
+ckan.views.default_views = image_view text_view
 
 # cd2_config settings
 scheming.dataset_schemas      = ckanext.cd2_config:schemas/datasets/cd2_measure.yml ckanext.cd2_config:schemas/datasets/cd2_study.yml
