YDA-6295: adjust playbook for Dockerized setup
Alter playbook so that it works with the new containerized
setup for CKAN 2.11

--- a/playbook.yml
+++ b/playbook.yml
@@ -18,10 +18,5 @@
   become: true
   roles:
     - common
-    - { role: acme_certificates, when: catalog_environment == "testing" }
-    - certificates
-    - nginx
-    - postgresql
-    - solr
-    - redis
-    - ckan
+    - docker_compose
+    - cd2_catalog_docker
