commons role: add htop utility on host

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -5,5 +5,7 @@
   ansible.builtin.import_tasks: firewalld.yml
 - name: Configure kernel settings
   ansible.builtin.import_tasks: kernel_settings.yml
+- name: Install EPEL repository
+  ansible.builtin.import_tasks: epel.yml
 - name: Install Ansible dependencies
   ansible.builtin.import_tasks: basics.yml
