Add param number of UWSGI CKAN workers

--- a/docker/.env
+++ b/docker/.env
@@ -13,6 +13,7 @@
 CKAN_SITE_ID=default
 CKAN_ADMIN_PASSWORD=testtest
 CKAN_DATABASE_PASSWORD=defaultpassword
+CKAN_UWSGI_NUM_WORKERS=2
 
 # Hostname, IP address and port of the catalog
 CD2_HOST=cd2.ckan
