--- a/docker/images/ckan/ckan-uwsgi.ini
+++ b/docker/images/ckan/ckan-uwsgi.ini
@@ -14,3 +14,7 @@ vacuum          =  true
 callable        =  application
 strict          =  true
 max-fd          =  1024
+
+enable-threads  = true
+lazy-apps       = true
+workers         = CKAN_UWSGI_NUM_WORKERS
