YDA-6519: fix Docker Compose config for Solr
We need to have /var/solr on a separate volume, because index
data is stored there.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -71,7 +71,7 @@ services:
     container_name: solr
     image: ghcr.io/utrechtuniversity/cd2-cat-solr:latest
     volumes:
-      - solr_data:/opt/solr/server/solr/ckan/data
+      - solr_data:/var/solr
 
   redis:
     container_name: redis
