Limit log verbosity

--- a/docker/images/ckan/ckan.ini
+++ b/docker/images/ckan/ckan.ini
@@ -252,13 +252,13 @@ qualname = werkzeug
 propagate = 0
 
 [logger_ckan]
-level = INFO
+level = WARNING
 handlers = console
 qualname = ckan
 propagate = 0
 
 [logger_ckanext]
-level = DEBUG
+level = WARNING
 handlers = console
 qualname = ckanext
 propagate = 0
