Docker setup: add Nginx -> CKAN dependency
The CKAN container needs to be up before the Nginx
container can start. Otherwise Nginx may fail to start
due to the upstream server (CKAN) not being available yet.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -46,6 +46,8 @@ services:
   nginx:
     container_name: nginx
     image: ghcr.io/utrechtuniversity/cd2-cat-nginx:latest
+    depends_on:
+      - ckan
     environment:
       - CD2_HOST=${CD2_HOST}
       - CD2_HOST_PORT=${CD2_HOST_PORT}
